--- a/style.css
+++ b/style.css
@@ -49,3 +49,52 @@ h1 {
   align-items: center;
   height: 600px;
 }
+.second_section_container {
+  width: 802.9px;
+  height: 806px;
+
+  margin: 0 auto;
+  margin-top: 90px;
+}
+.second_section_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+}
+.second_section_content h2 {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 88px;
+  font-weight: 700;
+  line-height: 107px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.second_section_content p {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.second_section_content h3 {
+  color: rgb(7, 2, 17);
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+.second_section_image {
+  width: 802.9px;
+  height: 500px;
+}
+.second_section_image img {
+  height: 100%;
+  width: 100%;
+}
