--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ h1 {
   align-items: center;
   height: 600px;
 }
+/* 65% section starts here */
 .second_section_container {
   width: 802.9px;
   height: 806px;
@@ -98,3 +99,87 @@ h1 {
   height: 100%;
   width: 100%;
 }
+/* 65% section ends here */
+
+/* Midnight party section start here */
+.midnight_party_container {
+  width: 1320px;
+  height: 600px;
+  border-radius: 16px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(
+      90deg,
+      rgb(7, 2, 17),
+      rgba(7, 2, 17, 0) 100%
+    ),
+    url(/images/Vectorrr.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+  margin-top: 200px;
+}
+
+.left_side_content {
+  width: 50%;
+  height: 600px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+}
+.left_side_content h2 {
+  color: rgb(255, 255, 255);
+  font-family: Merriweather;
+  font-size: 44px;
+  font-weight: 600;
+  line-height: 68px;
+  letter-spacing: 11%;
+  text-align: left;
+}
+.left_side_content p {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 200;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-top: 20px;
+  margin-left: 150px;
+  font-stretch: expanded;
+}
+.left_side_content span {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 30px;
+  display: block;
+}
+.right_side_content {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right_side_content img {
+  width: 349.16px;
+  height: 464.65px;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  bottom: 0%;
+}
+/* Midnight party section ends here */
